--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Databases-2"]
 	path = Databases-2
 	url = git@github.com:Eleee28/Databases-2.git
+[submodule "Mobile-Software-Development"]
+	path = Mobile-Software-Development
+	url = git@github.com:Eleee28/Mobile-Software-Development.git
