--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Software-Engineering-2"]
 	path = Software-Engineering-2
 	url = https://github.com/Eleee28/Software-Engineering-2.git
+[submodule "Databases-2"]
+	path = Databases-2
+	url = git@github.com:Eleee28/Databases-2.git
